# Simple-Battle-System

./: Attack.cpp  Attack.h  Battler.cpp  Battler.h  CMakeLists.txt  Heal.h  Meditate.cpp  Meditate.h  README.md  main.cpp
SkyesRandomStuff/: RandomNumber.cpp  RandomNumber.h
data/SYSTEM/: basic_attack.json
data/actions/: README.txt  abilities.json  attacks.json  example_attack.json  example_heal.json  fireball.json  heal.json  magic.json  meditate.json
data/battlers/: enemy.json  player.json
src/: main.cpp
src/actions/: Action.cpp  Action.h  Attack.cpp  Attack.h  Heal.cpp  Heal.h  Meditate.h  Recover.cpp  Recover.h  Recovery.cpp  Recovery.h
src/battle/: BattleManager.cpp  BattleManager.h  BattleMenu.cpp  BattleMenu.h  EnemyAI.cpp  EnemyAI.h
src/entities/: Battler.cpp  Battler.h
